k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    # ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: appcep.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goserver-service
            port:
              number: 80
  tls:
  - hosts:
    - "appcep.k8s.local"
    secretName: root-secret
